<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimeTrack</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
=======
<resources>

    <string name="app_name">TimeTrack</string>
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main Menu</string>
    <string name="title">Time Track</string>
    <string name="author">By: Dillan Wilding</string>
    <string name="goToTimeTracker">Go To Task Time Tracker</string>
    
    <string name="title_activity_time_track">TimeTrack</string>
    <string name="mainMenu">Back To Main Menu</string>
    <string name="addTaskHint">New Task</string>
    <string name="addTaskDescription">New Task</string>
    <string name="addTaskButton">Add Task</string>
    <!-- <string name="deleteTaskButton">Delete Task</string> -->
    
    <string name="timer">00:00:00</string>
    <string name="timerMs">.0</string>
    <string name="stopButtonText">Stop</string>
    <string name="startButtonText">Start</string>
    <string name="resetButtonText">Reset</string>
    <string name="editButtonText">Edit</string>
    <string name="deleteButtonText">Delete</string>
    <string name="updateButtonText">Update</string>
>>>>>>> 1a619541cd51884bce0d5b78c410bbe61aa795fb

</resources>