<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu" 
        android:onClick="mainMenu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/addTaskText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:hint="@string/addTaskHint" 
            android:description="@string/addTaskDescription" />

        <Button
            android:id="@+id/addTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addTaskButton" />
    </LinearLayout>

    <ScrollView 
        android:id="@+id/scroller"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >
           
        <LinearLayout
	        android:id="@+id/taskFragmentContainer"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" />
        
    </ScrollView>

</LinearLayout>